# INF2004_T92_Project

Driver/encoder/: CMakeLists.txt  encoder.c
Driver/ir_sensor/: CMakeLists.txt  ir_sensor.c
Driver/ir_sensor/ir_barcode/: CMakeLists.txt
Driver/ir_sensor/ir_line/: CMakeLists.txt  ir_line.c
Driver/magnetometer/magnetometer_projects/: CMakeLists.txt  magnetometer.c
Driver/magnetometerProj/: magnetometer.c
Driver/motor/: CMakeLists.txt  motor.c
Driver/pid + motor/: CMakeLists.txt  motor.c
Driver/ultrasonic/ultrasonic_project/: CMakeLists.txt
Driver/ultrasonic/ultrasonic_project/ultrasonic/: CMakeLists.txt  ultrasonic.c
Driver/wifi/: CMakeLists.txt  wifi.c
